# mbs

./: .dockerignore  .gitignore  .mbs-config.json  .mbs-project.json  Dockerfile  README.md  TODO.txt  build.sh  ci.sh  mbs.fish  mbs.sh
.github/workflows/: ci.yml
dockerfiles/: Dockerfile  bootstrap.template.sh  entrypoint.sh
dockerfiles/repo_init/: .mbs-config.json  .mbs-project.json
docs/: DOCs.md  architecture-and-workflow.md  cli-interface.md  components-development.md  configuration.md  getting-started.md  hermetic-execution-and-sandboxing.md  introduction.md  record-1.cast  record-2.cast  record-3.cast  record-4.cast  record-5.cast  schema-cache.excalidraw  schema-deps-graph.excalidraw  schema.excalidraw  toolchains-development.md
examples/: README.md  generate_monorepo.exs  run_monorepo.sh
examples/monorepo/components/c_native_binary/: .mbs-build.json  .mbs.json  CMakeLists.txt
mbs/: .mbs-build.json  .mbs.json  TODO.txt  build.sh  mix.exs
mbs/config/: config.exs  runtime.exs
mbs/lib/: cache.ex  checksum.ex  config.ex  const.ex  dependency_manifest.ex  docker.ex  docker_compose.ex  env.ex  manifest.ex  mbs.ex  project_manifest.ex  release_manifest.ex  toolchain.ex  utils.ex  workflow.ex
mbs/test/: generate_monorepo.exs
src/dask/: .mbs-build.json  mix.exs
src/mbs/: .mbs-build.json  mix.exs
src/toolchain/: .mbs-toolchain.json  Dockerfile  toolchain.sh
toolchain/: .mbs-toolchain.json  .mbs.json  Dockerfile  build.sh  toolchain.sh
workflow/: mix.exs
workflow/lib/: workflow.ex
workflow/test/: limiter_test.exs  workflow_test.exs
(+235 files in other folders)
